--- a/fomo.web/package.json
+++ b/fomo.web/package.json
@@ -1,11 +1,10 @@
 {
   "name": "fomo.web",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Sample UI module for FOMO discussions.",
   "main": "./lib/server.js",
   "scripts": {
-    "ui":
-      "node ./node_modules/@storybook/react/dist/server/index.js -p 3030 -c ./.storybook -s ./static",
+    "ui": "node ./node_modules/@storybook/react/dist/server/index.js -p 3030 -c ./.storybook -s ./static",
     "start": "node .",
     "lint": "sh ./node_modules/@tdb/typescript/sh/lint.sh",
     "now-build": "echo no-op",
@@ -20,7 +19,7 @@
     "@tdb/util": "1.5.14",
     "@tdb/util.server": "1.1.38",
     "@tdb/web": "1.3.49",
-    "fomo.common": "^1.0.1",
+    "fomo.common": "^1.0.2",
     "react-sparklines": "^1.7.0"
   },
   "devDependencies": {
